--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/springbootdb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mariadb://localhost:3306/portfolio
+spring.datasource.username=admin
+spring.datasource.password=admin01
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
